--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 /* BOOTSTRAP 3.x GLOBAL STYLES
 -------------------------------------------------- */
-body {
+
+
+ {
   padding-bottom: 40px;
   color: #1b7eb1;
 }
@@ -35,7 +37,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 400px;
+  height: 500px;
   background-color:#555;
 }
 .carousel img {
@@ -125,7 +127,7 @@ body {
 
   /* Bump up size of carousel content */
   .carousel-caption p {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-size: 21px;
     line-height: 1.4;
   }
