--- a/css/theme.css
+++ b/css/theme.css
@@ -3,8 +3,8 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
-  color: #5a5a5a;
+  padding-bottom: 50px;
+  color: #fff;
 }
 
 
@@ -136,10 +136,15 @@ body {
     margin-top: 120px;
   }
 }body {
-  padding-top: 70px;
-  padding-bottom: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
-
+p {
+  margin-left: 10px;
+  margin-right: 10px;
+  }
 .theme-dropdown .dropdown-menu {
   position: static;
   display: block;
